# gkeep-to-markdown-service

./: .dockerignore  .gitignore  Dockerfile  README.md  generate.py  pyproject.toml  requirements.txt  service.py  test.py  utils.py
.github/workflows/: deploy.yaml
app/: config.py  main.py
app/clients/: git_client.py  keep_client.py  llm_client.py
infra/: main.tf
k2md_service/: __init__.py  sync_manager.py
k2md_service/utils/: helper.py
old/: LICENSE  README.md  git_utils.py  service.py
tests/: test_git.py  test_keep.py  test_llm.py  test_sync_manager.py  test_utils.py
